Fix dark mode syntax highlighting

--- a/_includes/styles/style.scss
+++ b/_includes/styles/style.scss
@@ -57,15 +57,11 @@
   @import "pro/message-newsletter";
 
   {% unless site.hydejack.no_mark_external or site.no_mark_external %}
-  @import "hydejack/__link__/mark-external";
+    @import "hydejack/__link__/mark-external";
   {% endunless %}
   {% unless site.hydejack.no_break_layout %}
-  @import "hydejack/__link__/break-layout";
+    @import "hydejack/__link__/break-layout";
   {% endunless %}
-
-  @import "syntax";
-  @import "pro/syntax-dark";
-  @import "spinner";
 
   @import "my-style";
 {% else %}
@@ -105,10 +101,6 @@
     @import "hydejack/_break-layout.pre.scss";
   {% endunless %}
 
-  @import "syntax";
-  @import "pro/syntax-dark";
-  @import "spinner";
-
   @import "my-inline";
   @import "my-style";
 
@@ -121,3 +113,11 @@
     {% include styles/page-style.scss color=color theme_color=theme_color %}
   {% endif %}
 {% endunless %}
+
+@import "spinner";
+
+@import "syntax";
+@import "pro/syntax-dark";
+{% if site.hydejack.dark_mode.dynamic %}
+  @import "pro/dark-mode-dynamic-syntax";
+{% endif %}
